force-app/main/default/objects/SOQL_Saved_Query__c/SOQL_Saved_Query__c.object-meta.xml
<CustomObject>
    <label>SOQL Saved Query</label>
    <pluralLabel>SOQL Saved Queries</pluralLabel>
    <description
  >User-saved SOQL Whisperer query, named and stored deliberately for reuse. Stores query text and originating prompt/object-scope only — never result rows. Owner-only (Private) because saved SOQL text may contain PHI in WHERE-clause literals.</description>
    <sharingModel>Private</sharingModel>
    <nameField>
        <label>Saved Query Name</label>
        <type>Text</type>
    </nameField>
</CustomObject>