force-app/main/default/objects/SOQL_Saved_Query__c/fields/Object_Scope__c.field-meta.xml
<CustomField>
    <fullName>Object_Scope__c</fullName>
    <label>Object Scope</label>
    <type>LongTextArea</type>
    <length>1000</length>
    <description
  >Comma-separated object API names, restored with the query so Refine still works.</description>
</CustomField>