force-app/main/default/objects/SOQL_Saved_Query__c/fields/SOQL__c.field-meta.xml
<CustomField>
    <fullName>SOQL__c</fullName>
    <label>SOQL</label>
    <type>LongTextArea</type>
    <length>5000</length>
    <description
  >The saved SOQL text. Query text/metadata only — never result rows.</description>
</CustomField>